--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -1,3 +1,5 @@
-// Partial imports
+/* ============================================= */
+/* Base Imports */
+/* ============================================= */
 @import '_normalize',
         '_typography';
