--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -1,4 +1,6 @@
-// Partial imports
+/* ============================================= */
+/* Utilities Imports */
+/* ============================================= */
 @import '_variables',
         '_mixins';
 
