--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,7 @@
-// Partial imports
+/* ============================================= */
+/* Sub-Folder Imports */
+/* ============================================= */
+
 @import 'utilities/index',
         'base/index',
-        'component/index';
+        'components/index';
