--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -1,5 +1,6 @@
 /* ============================================= */
 /* Base Imports */
 /* ============================================= */
-@import '_normalize',
-        '_typography';
+@import
+'normalize',
+'typography';
