--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -1,6 +1,7 @@
 /* ============================================= */
 /* Utilities Imports */
 /* ============================================= */
-@import '_variables',
-        '_mixins';
+@import
+'variables',
+'mixins';
 
