--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,1 +1,11 @@
-$color-primary:#777;
+// Colors
+$color-text:#777;
+$color-primary: #58e1c1;
+$color-secondary: #51ddfc;
+$color-col-3: #deb2ee;
+$color-col-4: #7ee6fd;
+$color-col-6: #4da2bb;
+$color-col-7: #ec9fa3;
+
+// Breakpoints
+$break: 768px;
