--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,6 +2,7 @@
 /* Sub-Folder Imports */
 /* ============================================= */
 
-@import 'utilities/index',
-        'base/index',
-        'components/index';
+@import 
+'utilities/index',
+'base/index',
+'components/index';
