--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -2,10 +2,11 @@
 $color-text:#777;
 $color-primary: #58e1c1;
 $color-secondary: #51ddfc;
+$color-text-button: #fff;
 $color-col-3: #deb2ee;
 $color-col-4: #7ee6fd;
 $color-col-6: #4da2bb;
 $color-col-7: #ec9fa3;
 
-// Breakpoints
+// Breakpoint
 $break: 768px;
