--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -1,6 +1,6 @@
 /* ============================================= */
 /* Base Imports */
 /* ============================================= */
-@import
-'normalize',
-'typography';
+
+@import 'normalize';
+@import 'typography';
