--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,10 +1,10 @@
 /* ============================================= */
 /* Components Imports */
 /* ============================================= */
-@import
-'buttons',
-'forms',
-'navigation',
-'images',
-'grid',
-'media-queries';
+
+@import 'buttons';
+@import 'forms';
+@import 'navigation';
+@import 'images';
+@import 'grid';
+@import 'media-queries';
