--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,7 +2,6 @@
 /* Sub-Folder Imports */
 /* ============================================= */
 
-@import 
-'utilities/index',
-'base/index',
-'components/index';
+@import 'utilities/index';
+@import 'base/index';
+@import 'components/index';
