--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -1,7 +1,6 @@
 /* ============================================= */
 /* Utilities Imports */
 /* ============================================= */
-@import
-'variables',
-'mixins';
 
+@import 'variables';
+@import 'mixins';
