--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,29 +1,13 @@
 .btn {
-    margin-top: 15px;
-    width: 100%;
-    color: $color-text-button;
-    border: none;
-    padding: 10px 0;
-    text-transform: uppercase;
-    border-radius: 5px;
+  margin-top: 15px;
+  width: 100%;
+  color: $color-text-button;
+  border: none;
+  padding: 10px 0;
+  text-transform: uppercase;
+  border-radius: 5px;
+
+  @each $type, $color in $button-colors {
+    @include button-styles($type, $color);
   }
-  
-  .default {
-    background-color: $color-secondary;
-  }
-  
-  .error {
-    background-color: #e4757a;
-  }
-  
-  .info {
-    background-color: #927bc1;
-  }
-  
-  .success {
-    background-color: #63cc82;
-  }
-  
-  .warning {
-    background-color: #fd7856;
-  }
+}
